--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "flutterwave-node-v3": "^1.0.12",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemailer": "^6.8.0",
